# spring-cloud-gcp

./: .gitignore  .travis.yml  CHANGELOG.adoc  CHANGELOG.md  CONTRIBUTING.md  ConcurrentMapAdventures.java  README.adoc  RELEASING.adoc  SECURITY.md  history.md  index.html  main  pom.xml  q  release-please-config.json  renovate.json  travis.tar.gz.enc  versions.txt
.github/: CODEOWNERS  dependabot.yml  (+4 more)
generator/resources/showcase/: BUILD.bazel
spring-cloud-generator/: BUILD.bazel  README.md  WORKSPACE  cleanup.sh  compute-monorepo-tag.sh  download-repos.sh  excluded_libs  generate-all.sh  generate-library-list.sh  generate-one.sh  googleapis-dep-string.txt  googleapis-gapic-string.txt  java_gapic_pkg.bzl  java_gapic_spring.bzl  library_list.txt  out  pom.xml  reset-previews-folder.sh  sanity-checks.sh  setup-build-rule.sh  setup-googleapis-rules.sh  spring-cloud-generator-wrapper  tmp-generate-one-output
spring-cloud-generator/autoconfiguration-tests/google-cloud-language-spring-starter/unit-tests/com/google/cloud/language/v1/spring/: LanguageAutoConfigurationTests.java
spring-cloud-generator/autoconfiguration-tests/unit-tests/com/google/cloud/language/v1/spring/: LanguageAutoConfigurationTests.java
spring-cloud-generator/google-cloud-spring-generator/: BUILD.bazel  WORKSPACE  java_gapic_spring.bzl  pom.xml
spring-cloud-generator/google-cloud-spring-generator/rules_java_gapic_spring/: BUILD.bazel  java_gapic_spring.bzl
spring-cloud-generator/google-cloud-spring-generator/src/main/java/com/google/api/generator/spring/: SpringGenerator.java
spring-cloud-generator/google-cloud-spring-generator/src/main/java/com/google/api/generator/spring/composer/: SpringComposer.java
spring-cloud-generator/google-cloud-spring-generator/src/main/java/com/google/api/generator/spring/utils/: ComposerUtils.java  LoggerUtils.java  Utils.java
spring-cloud-generator/google-cloud-spring-generator/src/main/java/com/google/api/spring-generator/: Main.java  SpringWriter.java
spring-cloud-generator/google-cloud-spring-generator/src/main/java/com/google/api/spring-generator/composer/: SpringAutoConfigClassComposer.java  SpringPackageInfoComposer.java  SpringPropertiesClassComposer.java
spring-cloud-generator/google-cloud-spring-generator/src/test/java/com/google/api/generator/spring/: SpringWriterTest.java
spring-cloud-generator/google-cloud-spring-generator/src/test/java/com/google/api/generator/spring/composer/: SpringAutoConfigClassComposerTest.java  SpringComposerTest.java  SpringPackageInfoComposerTest.java  SpringPropertiesClassComposerTest.java
spring-cloud-generator/google-cloud-spring-generator/src/test/java/com/google/api/generator/spring/utils/: Assert.java  Differ.java  GrpcRestTestProtoLoader.java  TestProtoLoader.java  TestUtils.java
spring-cloud-generator/google-cloud-spring-generator/src/test/java/com/google/api/spring-generator/composer/: SpringComposerTest.java  SpringPackageInfoComposerTest.java  SpringPropertiesClassComposerTest.java
spring-cloud-generator/scripts/: compute-monorepo-tag.sh  generate-all.sh  generate-library-list.sh  generate-showcase-utilities.sh  generate-showcase.sh  generate-steps.sh  generate.sh  prepare-generate.sh  sanity-checks.sh  setup-build-rule.sh  setup-googleapis-rules.sh  setup-showcase.sh
spring-cloud-generator/scripts/resources/: googleapis-dep-string.txt  googleapis_modification_string.txt  library_list.txt  manual_modules_exclusion_list.txt
spring-cloud-generator/showcase/showcase-spring-starter/: pom.xml
spring-cloud-generator/showcase/showcase-spring-starter/src/test/resources/: fake-credential-key-2.json
spring-cloud-generator/spring-cloud-previews-template/: README.md  pom.xml
spring-cloud-generator/src/main/java/com/google/api/generator/spring/: Main.java  SpringGenerator.java  SpringWriter.java
spring-cloud-generator/src/main/java/com/google/api/generator/spring/composer/: SpringAutoConfigClassComposer.java  SpringComposer.java  SpringPackageInfoComposer.java  SpringPropertiesClassComposer.java
spring-cloud-generator/src/main/java/com/google/api/generator/spring/utils/: ComposerUtils.java  LoggerUtils.java  Utils.java
spring-cloud-generator/src/main/java/com/google/cloud/generator/spring/: Main.java  SpringGenerator.java  SpringWriter.java
spring-cloud-generator/src/main/java/com/google/cloud/generator/spring/composer/: SpringAutoConfigClassComposer.java  SpringComposer.java  SpringPackageInfoComposer.java  SpringPropertiesClassComposer.java
spring-cloud-generator/src/main/java/com/google/cloud/generator/spring/utils/: ComposerUtils.java  LoggerUtils.java  Utils.java
spring-cloud-generator/src/test/java/com/google/api/generator/spring/: SpringWriterTest.java
spring-cloud-generator/src/test/java/com/google/api/generator/spring/composer/: SpringAutoConfigClassComposerTest.java  SpringComposerTest.java  SpringPackageInfoComposerTest.java  SpringPropertiesClassComposerTest.java
spring-cloud-generator/src/test/java/com/google/api/generator/spring/goldens/: SpringPackagePom.golden
spring-cloud-generator/src/test/java/com/google/api/generator/spring/utils/: Assert.java  Differ.java  GrpcRestTestProtoLoader.java  TestProtoLoader.java  TestUtils.java
spring-cloud-generator/src/test/java/com/google/cloud/generator/spring/: SpringWriterTest.java  TestUtils.java
spring-cloud-generator/src/test/java/com/google/cloud/generator/spring/composer/: SpringAutoConfigClassComposerTest.java  SpringComposerTest.java  SpringPackageInfoComposerTest.java  SpringPropertiesClassComposerTest.java
spring-cloud-generator/src/test/java/com/google/cloud/generator/spring/goldens/: SpringAdditionalMetadataJson.golden  SpringPackagePom.golden
spring-cloud-generator/src/test/java/com/google/cloud/generator/spring/utils/: Assert.java  Differ.java  GoldenFileWriter.java  GrpcRestTestProtoLoader.java  RestTestProtoLoader.java  TestProtoLoader.java  TestUtils.java
spring-cloud-generator/src/test/proto/: echo.proto
spring-cloud-generator/src/test/resources/: echo_v1beta1.yaml  showcase_grpc_service_config.json
(+4639 files in other folders)
