load("@rules_java//java:defs.bzl", "java_binary", "java_proto_library")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "protoc-gen-java_gapic_spring",
    main_class = "com.google.api.generator.spring.Main",
    runtime_deps = ["@maven//:com_google_api_gapic_generator_java"],
)